--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "publish": "npm publish --access=public dist/ng2-smart-table",
     "changelog": "standard-changelog -p angular",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "prepare": "npm run build:lib"
   },
   "private": true,
   "dependencies": {
