--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "ng e2e",
     "clean:dist": "npm run rimraf -- dist",
-    "changelog": "standard-changelog"
+    "changelog": "standard-changelog",
+    "prepare": "npm run build:lib"
   },
   "dependencies": {
     "@angular/animations": "6.0.2",
